--- a/1-13.md
+++ b/1-13.md
@@ -10,11 +10,16 @@ Termainal : Select Default Shell
 
 ---
 
-## 터미널에서 컴파일
+## 터미널에서 컴파일 및 실행
 
 1. c파일이 있는 폴더로 이동후
 2. gcc 파일명.c 입력후 엔터
 3. .\생성된exe파일명.exe 입력후 엔터
+
+```
+    gcc main.c
+    .\a.exe
+```
 
 ---
 
@@ -22,7 +27,7 @@ a.exe의 경우
 
 .\a.exe 로 입력하여야 한다.
 
-./a 까지 입력 후 탭키를 누르면 자동완성 (백슬래시 입력 편리)
+./a 까지 입력 후 탭키를 누르면 자동완성 (백슬래시 입력 편리) : **powershell에서만 가능**
 
 ---
 
@@ -30,6 +35,8 @@ a.exe의 경우
 
 ```
 gcc 파일명.c -o 원하는파일명.exe
+gcc main.c -o main.exe
+.\main.exe
 ```
 
 -o : output
