--- a/markdown_files/4-10.md
+++ b/markdown_files/4-10.md
@@ -2,8 +2,8 @@
 
 ## 변환지정자
 
-![변환지정자](./images/4-10-1.jpg)
+![변환지정자](../images/4-10-1.jpg)
 
 ## modifier(변환지정자 앞)
 
-![modifier](./images/4-10-2.jpg)
+![modifier](../images/4-10-2.jpg)
