--- a/markdown_files/4-8.md
+++ b/markdown_files/4-8.md
@@ -1,6 +1,6 @@
 # 4.8 변환 지정자의 수식어들 modifiers
 
-![형식 지정자](./images/4-8-1.jpg)
+![형식 지정자](../images/4-8-1.jpg)
 
 printf("%+10.5hi", 256);
 
@@ -10,16 +10,16 @@ https://cplusplus.com/reference/cstdio/printf/
 
 ## flag
 
-![flags1](./images/4-8-2.jpg)
+![flags1](../images/4-8-2.jpg)
 
 ---
 
 ## width & precision
 
-![width & precision](./images/4-8-3.jpg)
+![width & precision](../images/4-8-3.jpg)
 
 ---
 
 ## length
 
-![length](./images/4-8-4.jpg)
+![length](../images/4-8-4.jpg)
