--- a/markdown_files/4-9.md
+++ b/markdown_files/4-9.md
@@ -1,6 +1,6 @@
 # 4.9 printf() 함수가 인자들을 해석하는 과정
 
-![이미지 설명](./images/4-9.jpg)
+![이미지 설명](../images/4-9.jpg)
 
 n1, n2, n3 인자들을 stack이라는 메모리 공간으로 옮긴다.
 
